Mar 19,2017: 0.1.07 --> Made use of AddChannel whenever joining a channel.
                        Tryin to make the bot join via pms
Mar 19,2017: 0.1.08 --> Made the bot accept PMs,but it can't find the users
                        in the channels.Gotta fix tht.
Mar 24,2017: 0.1.09 --> Made the bot accept PMs and also made it work in
                        the channel(removed some functions in the process.)
May 08,2017: 0.1.10 --> Made the has_in_chan(string&,string&) function work
Jul 16,2017: 0.1.11 --> Made a cmake file,plus prettified files to my taste.
                        Made the bot reply to privmsg for coffee.
Jul 16,2017: 0.1.12 --> Made the part command.Need to integrate it into
                        handle_msg().
Jul 16,2017: 0.1.13 --> Made the part message work. Will be using TryxPS
                        in future versions for plugins.
Jul 29,2017: 0.2.00 --> Made suitable changes to the cmakelists.txt for 
                        including TryxPS. Changed the TODO list. 
Sep 02,2017: 0.3.00 --> Polished the codebase, changed the todo.There's a 
                        segfault in the code,fixing it in a sec.
Sep 02,2017: 0.3.01 --> Removed cmake/modules since the project uses the 
                        cmake config files generated from TryxPS library.
Sep 06,2017: 0.3.02 --> Solved the segfault.bool RecvData(string&) now 
                        receives a newline ended message.
Sep 07,2017: 0.3.03 --> Solved the MooPlugin issues.
Oct 02,2017: 0.3.04 --> Wrote important helper functions...changed 
                         TODO...removed some unnecessary files.
Oct 02,2017: 0.3.05 --> Wrote the ping plugin.
Oct 02,2017: 0.3.06 --> Ping Plugin finally works perfectly.Changed 
                        HISTORY,TODO to reflect correct timelines.Added 
                        another note in README.md
Oct 02,2017: 0.3.07 --> Lil polishing the Readme.md file. Plus solved a small 
                        problem in ping plugin.
